nova organização dos apontamentos

--- a/01_mehsgrid.ipynb
+++ b/01_mehsgrid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "convinced-champagne",
+   "id": "covered-rental",
    "metadata": {},
    "source": [
     "# A Função `meshgrid`\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-budget",
+   "id": "attended-singing",
    "metadata": {},
    "source": [
     "# Intuição\n",
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "congressional-scotland",
+   "execution_count": 2,
+   "id": "level-liberal",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automotive-clearing",
+   "id": "lasting-teacher",
    "metadata": {},
    "source": [
     "# Problemas de Generalização\n",
@@ -125,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "continuing-transaction",
+   "execution_count": 3,
+   "id": "other-package",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-haven",
+   "id": "dominant-insulin",
    "metadata": {},
    "source": [
     "# Aplicações\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "involved-turkey",
+   "id": "removable-relay",
    "metadata": {},
    "source": [
     "## Exemplo 1: visualizando a tabuada de multiplicação\n",
@@ -210,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "protected-miami",
+   "execution_count": 4,
+   "id": "loaded-nevada",
    "metadata": {},
    "outputs": [
     {
@@ -286,18 +286,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "violent-starter",
+   "id": "novel-battlefield",
    "metadata": {},
    "source": [
     "## Exemplo 2: uma função mais complexa\n",
     "\n",
-    "Vamos modelar a função $f(x, y) = xe^{-(x^2 + y^2)}$."
+    "Vamos modelar a função $f(x, y) = xe^{-(x^2 + y^2)}$. Note que a sequência é sempre a mesma: gerar a malha de números possíveis, modelar a parte dessa a função e plotar."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "spanish-genre",
+   "execution_count": 5,
+   "id": "british-station",
    "metadata": {},
    "outputs": [
     {
