--- a/03_estruturacao.ipynb
+++ b/03_estruturacao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wooden-winter",
+   "id": "invisible-banks",
    "metadata": {},
    "source": [
     "# Intuição\n",
@@ -10,6 +10,14 @@
     "Como já sabemos, a nuvem de pontos é um conjunto desestruturado; basta perceber que os elementos que a forma - os pontos - estão distribuídos no espaço sem uma \"ordem\" ou \"padrão\" explícito. Em outras palavras: sem conexão. Já uma malha (ou mesh) é um conjunto de triângulos conectados que formam uma superfície. Um triângulo é formado por vértices (pontos no espaço) e arestas (linhas que conectam dois pontos). Portanto, uma malha é um conjunto estruturado de dados. Dessas duas definições já podemos intuir que uma nuvem de pontos seria \"uma malha sem arestas\" ou \"uma malha só de vértices\"; transformar uma nuvem em uma malha significa encontrar as arestas.\n",
     "\n",
     "Entretanto, existem algumas estratégias de geração dessa malha. A mais simples delas tenta encontrar uma função do $R^2 \\rightarrow R$, ou seja, um $f(x, y) \\rightarrow z$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "alone-limit",
+   "metadata": {},
+   "source": [
+    "# CONTINUAR..."
    ]
   }
  ],
